Update style folder name

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lytrally</title>
-    <link rel="stylesheet" href="../styles/styles.css">
-    <link rel="stylesheet" href="../styles/fontawesome.min.css">
-    <link rel="stylesheet" href="../styles/all.min.css">
-    <link rel="stylesheet" href="../styles/solid.css">
-    <link rel="stylesheet" href="../styles/solid.min.css">
+    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/fontawesome.min.css">
+    <link rel="stylesheet" href="../style/all.min.css">
+    <link rel="stylesheet" href="../style/solid.css">
+    <link rel="stylesheet" href="../style/solid.min.css">
 </head>
 </head>
 <body>
