--- a/templates/signin.html
+++ b/templates/signin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lytrally</title>
+    <base href="/project-lytrally/">
     <link rel="stylesheet" href="../style/signin.css">
     <link rel="stylesheet" href="../style/fontawesome.min.css">
     <link rel="stylesheet" href="../style/all.min.css">
