Update the file path for the css files

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lytrally</title>
     <base href="/project-lytrally/">
-    <link rel="stylesheet" href="style/signin.css">
-    <link rel="stylesheet" href="style/fontawesome.min.css">
-    <link rel="stylesheet" href="style/all.min.css">
-    <link rel="stylesheet" href="style/solid.css">
-    <link rel="stylesheet" href="style/solid.min.css">
+    <link rel="stylesheet" href="../style/signin.css">
+    <link rel="stylesheet" href="../style/fontawesome.min.css">
+    <link rel="stylesheet" href="../style/all.min.css">
+    <link rel="stylesheet" href="../style/solid.css">
+    <link rel="stylesheet" href="../style/solid.min.css">
 </head>
 <body>
     <section class="container">
