--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lytrally</title>
     <base href="/project-lytrally/">
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="stylesheet" href="../style/fontawesome.min.css">
-    <link rel="stylesheet" href="../style/all.min.css">
-    <link rel="stylesheet" href="../style/solid.css">
-    <link rel="stylesheet" href="../style/solid.min.css">
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/fontawesome.min.css">
+    <link rel="stylesheet" href="/style/all.min.css">
+    <link rel="stylesheet" href="/style/solid.css">
+    <link rel="stylesheet" href="/style/solid.min.css">
 </head>
 </head>
 <body>
@@ -34,7 +34,8 @@
             <div class="heroImage"></div>
             <div class="heroText">
                 <p class="mainText">A new tool to help you express yourself</p>
-                <p class="subText">Built to take the work out of writing<br>Perfect for copywriters, with built in resources to boost productivity</p>
+                <p class="subText">Built to take the work out of writing<br>
+                    Perfect for copywriters, with built in resources to boost productivity</p>
                 <button>Get Started</button>
             </div>
         </div>
