--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lytrally</title>
     <!-- <base href="/project-lytrally/"> -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/fontawesome.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/all.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/solid.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/solid.min.css') }}">
+    <link rel="stylesheet" href="../static/style/style.css">
+    <link rel="stylesheet" href="../static/style/fontawesome.min.css">
+    <link rel="stylesheet" href="../static/style/all.min.css">
+    <link rel="stylesheet" href="../static/style/solid.css">
+    <link rel="stylesheet" href="../static/style/solid.min.css">
 </head>
 <body>
     <nav>
