--- a/static/style/style.css
+++ b/static/style/style.css
@@ -21,7 +21,6 @@ body {
     font-size: 16px;
     overflow: hidden;
 }
-
 .s-screen {
     width: 100%;
     position: absolute;
@@ -200,7 +199,7 @@ a:active {
     height: 100vh;
     position: absolute;
     z-index: 10;
-    overflow: hidden;
+    overflow: auto;
     display: none;
     /* transform: translateX(100%);
     transition: transform 2s ease-in-out; */
@@ -219,7 +218,7 @@ a:active {
     width: 100%;
     overflow-y: auto;
     margin-top: auto;
-    margin-bottom: auto;
+    margin-bottom: 1rem;
 }
 
 .signIn_signup_card
@@ -417,12 +416,6 @@ a:active {
 .noAccount
 {
     text-align: center;
-}
-
-@media screen and (min-width: 300px) {
-    ::-webkit-scrollbar {
-        width: 0px;
-    }
 }
 
 @media screen and (min-width: 720px) {
