--- a/templates/index.html
+++ b/templates/index.html
@@ -24,17 +24,17 @@
                 <a class="navA" href="#">Contact Us</a>
                 <a class="navA" href="#">About</a>
                 <!-- <a class="navA" href="{{ url_for('signup') }}">Sign Up</a> -->
-                <a id="signIn" class="navA" onclick="signIn_signUp()" >Sign In</a>
+                <a id="signIn" class="navA" onclick="signIn()" >Sign In</a>
             </div>
         </div>
-        <div class="l-screen">
+        <div onclick="close_signIn_signUp_card()" class="l-screen">
             <h1><a href="../templates/index.html">Lytrally</a></h1>
             <div class="navlinks">
                 <a href="../templates/index.html">Home</a>
                 <a href="#">Service</a>
                 <a href="#">Contact Us</a>
                 <!-- <button><a href="../templates/signup.html">Sign Up</a></button> -->
-                <button><a onclick="signIn_signUp()" >Sign In</a></button>
+                <button onclick="signIn()" ><a >Sign In</a></button>
             </div>
         </div>
     </nav>
@@ -42,6 +42,9 @@
         <div class="overlay"></div>
         <div class="signIn_sighUp_container">
             <div class="signIn_signup_card">
+                <div class="close_signin_signup">
+                    <i onclick="close_signIn_signUp_card()" class="fa-solid fa-x"></i>
+                </div>
                 <h4 id="signin_sigiup_header">Sign in into your Lytrally account</h4>
                 <button id="google_btn">
                     <img src="../static/images/google.png" alt="Google Icon">
@@ -53,10 +56,16 @@
                 </button>
                 <div class="formContainer">
                     <form action="#" id="signin_form" autocomplete="on" method="post">
-                        <label id="email" for="email">Email</label>
+                        <label id="emailLabel" for="email">Email</label>
                         <input type="email" name="email" id="email">
-                        <label id="password" for="password">Password</label>
+                        <label id="passwordLabel" for="password">Password</label>
                         <input type="password" name="password" id="password">
+                        <label id="confirmPasswordLabel" for="confirmPassword">Confirm Password</label>
+                        <input type="password" name="confirmPassword" id="confirmPassword">
+                        <div class="privacyPolicy">
+                            <input type="checkbox" name="privacyPolicy" id="privacyPolicy">
+                            <label for="privacyPolicy">I Agree with <span><a href="">privacy</a></span> and <span><a href="">policy</a></span></label>
+                        </div>
                         <div class="check_forgot">
                             <div class="checkRemember">
                                 <input type="checkbox" name="remeberMe" id="remeberMe">
@@ -68,19 +77,20 @@
                     </form>
                 </div>
                 <div class="noAccount">
-                    <a href="./signin.html" class="noAccount">Do not have an account</a>
+                    <a onclick="signUp()" class="noAccount">Do not have an account</a>
+                    <a onclick="signIn()" class="signUpsignIn">Or Sign In</a>
                 </div>
             </div>
         </div>
     </section>
     <section class="landingPage">
         <div class="heroPage">
-            <div class="heroImage"></div>
+            <div class="heroImage"><img src="../static/images/Laptop-image-lytrally.png" alt="Laptop-image-lytrally"></div>
             <div class="heroText">
                 <p class="mainText">A new tool to help you express yourself</p>
                 <p class="subText">Built to take the work out of writing<br>
                     Perfect for copywriters, with built-in resources to boost productivity</p>
-                <button id="signUp" onclick="signIn_signUp()"><a>Get Started</a></button>
+                <button id="signUp" onclick="signUp()"><a>Get Started</a></button>
             </div>
         </div>
     </section>
