--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                 <a id="signIn" class="navA" onclick="signIn()" >Sign In</a>
             </div>
         </div>
-        <div onclick="close_signIn_signUp_card()" class="l-screen">
+        <div class="l-screen">
             <h1><a href="../templates/index.html">Lytrally</a></h1>
             <div class="navlinks">
                 <a href="../templates/index.html">Home</a>
@@ -76,7 +76,7 @@
                         <button type="submit" id="submit">Sign In</button>
                     </form>
                 </div>
-                <div class="noAccount">
+                <div class="noAccount_signIn">
                     <a onclick="signUp()" class="noAccount">Do not have an account</a>
                     <a onclick="signIn()" class="signUpsignIn">Or Sign In</a>
                 </div>
