--- a/static/style/style.css
+++ b/static/style/style.css
@@ -320,6 +320,20 @@ a:active {
     margin-bottom: 10px;
 }
 
+#google_btn
+{
+    width: 47.5%;
+    float: left;
+    margin-right: 5%;
+}
+
+#facebook_btn
+{
+    width: 47.5%;
+    /* float: right; */
+    transition: width 0.05s ease-in-out;
+}
+
 .signIn_signup_card button:hover
 {
     cursor: pointer;
@@ -402,6 +416,7 @@ a:active {
     align-items: center;
     justify-content: left;
     gap: 0;
+    margin-bottom: 1rem;
 }
 
 .privacyPolicy > input[type="checkbox"]
@@ -484,6 +499,8 @@ a:active {
 .noAccount_signIn
 {
     text-align: center;
+    margin: 0;
+    margin-bottom: 1rem;
 }
 
 #confirmPassword, #confirmPasswordLabel, .privacyPolicy
@@ -516,7 +533,7 @@ a:active {
         margin-inline: 20vw;
         padding-inline: 40px;
         padding-block: 30px;
-        border-radius: 25px;
+        border-radius: 15px;
     }
 
     .signIn_signup_card h4
@@ -526,9 +543,9 @@ a:active {
 
     .signIn_signup_card button
     {
-        height: 70px;
-        font-size: 22px;
-        border-radius: 25px;
+        height: 50px;
+        font-size: 20px;
+        border-radius: 15px;
     }
 
     .signIn_signup_card button > img
@@ -545,22 +562,22 @@ a:active {
 
     .formContainer label
     {
-        font-size: 32px;
+        font-size: 25px;
     }
 
     .formContainer input
     {
-        height: 70px;
+        height: 50px;
         width: 80%;
-        border-radius: 25px;
-        font-size: 22px;
+        border-radius: 15px;
+        font-size: 20px;
     }
 
     .formContainer input:focus
     {
         width: 100%;
-        margin-top: auto;
-        margin-bottom: auto;
+        /* margin-top: auto;
+        margin-bottom: auto; */
     }
 
     .checkRemember > input:focus
@@ -661,7 +678,7 @@ a:active {
         margin-inline: 20vw;
         padding-inline: 40px;
         padding-block: 30px;
-        border-radius: 25px;
+        border-radius: 15px;
     }
 
     .signIn_signup_card h4
@@ -671,9 +688,9 @@ a:active {
 
     .signIn_signup_card button
     {
-        height: 70px;
-        font-size: 22px;
-        border-radius: 25px;
+        height: 55px;
+        font-size: 20px;
+        border-radius: 15px;
     }
 
     .signIn_signup_card button > img
@@ -690,22 +707,22 @@ a:active {
 
     .formContainer label
     {
-        font-size: 32px;
+        font-size: 25px;
     }
 
     .formContainer input
     {
-        height: 70px;
+        height: 55px;
         width: 80%;
-        border-radius: 25px;
-        font-size: 22px;
+        border-radius: 15px;
+        font-size: 20px;
     }
 
     .formContainer input:focus
     {
         width: 100%;
-        margin-top: auto;
-        margin-bottom: auto;
+        /* margin-top: auto;
+        margin-bottom: auto; */
     }
 
     .checkRemember > input:focus
@@ -810,5 +827,6 @@ a:active {
     .signIn_signup_card
     {
         margin-inline: 30vw;
+        margin-top: 1rem;
     }
 }
