--- a/static/style/style.css
+++ b/static/style/style.css
@@ -20,9 +20,10 @@ body {
     width: 100%;
     font-size: 16px;
     overflow: hidden;
-    background: url(../images/a_fountain_pen_on_a_blue_notepad_shot_at_a_cinematic_angle\,_blue_aesthetics.png), lightgray 50% / cover no-repeat;
+    background: url(../images/compressed_a_fountain_pen_on_a_blue_notepad_shot_at_a_cinematic_angle\,_blue_aesthetics-min.png), var(--lilac-color) 50% / cover no-repeat;
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: var(--lilac-color);
 }
 body::-webkit-scrollbar
 {
@@ -137,7 +138,7 @@ body::-webkit-scrollbar
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background: url(../images/a_fountain_pen_on_a_blue_notepad_shot_at_a_cinematic_angle\,_blue_aesthetics.png), lightgray 50% / cover no-repeat;
+    background: url(../images/compressed_a_fountain_pen_on_a_blue_notepad_shot_at_a_cinematic_angle\,_blue_aesthetics-min.png), var(--lilac-color) 50% / cover no-repeat;
     background-repeat: no-repeat;
     background-size: cover;
     padding-inline: 16px;
