--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,37 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lytrally</title>
     <!-- <base href="/project-lytrally/"> -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/signup.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/fontawesome.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/all.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/solid.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/solid.min.css') }}">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style/signup.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style/fontawesome.min.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style/all.min.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style/solid.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style/solid.min.css') }}"
+    />
+  </head>
+  <body>
     <nav>
-        <div class="profileImg"></div>
+      <div class="profileImg"></div>
     </nav>
     <section class="container">
-        <div class="signUpContainer">
-            <form action="#" id="signup_form" autocomplete="on" method="post">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-                <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword">
-                <div class="privacyPolicy">
-                    <input type="checkbox" name="privacyPolicy" id="privacyPolicy">
-                    <label for="privacyPolicy">I Agree with <span><a href="">privacy</a></span> and <span><a href="">policy</a></span></label>
-                </div>
-                <button type="submit" id="submit">Sign Up</button>
-                <a class="signin" href="{{ url_for('signin') }}">Or Sign In</a>
-            </form>
-        </div>
+      <div class="signUpContainer">
+        <form action="#" id="signup_form" autocomplete="on" method="POST">
+          {{ form.hidden_tag() }}
+          <fieldset>
+            <div class="form-group">
+              {{ form.email.label(class="form-control-label") }} {% if
+              form.email.errors %} {{ form.email(class="form-control
+              form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.email.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+              {% else %} {{ form.email(class="form-control form-control-lg") }}
+              {% endif %}
+            </div>
+
+            <div class="form-group">
+              {{ form.password.label(class="form-control-label") }} {% if
+              form.password.errors %} {{ form.password(class="form-control
+              form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.password.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+              {% else %} {{ form.password(class="form-control form-control-lg")
+              }} {% endif %}
+            </div>
+
+            <div class="form-group">
+              {{ form.confirm_password.label(class="form-control-label") }} {%
+              if form.confirm_password.errors %} {{
+              form.confirm_password(class="form-control form-control-lg
+              is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.confirm_password.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+              {% else %} {{ form.confirm_password(class="form-control
+              form-control-lg") }} {% endif %}
+            </div>
+
+            <div class="form-check">
+              {{ form.policy_agreement(class="form-check-input") }} {{
+              form.policy_agreement.label(class="form-check-label") }}
+            </div>
+
+            <div class="form-group">
+              {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+            <a class="signin" href="{{ url_for('signin') }}">Or Sign In</a>
+          </fieldset>
+        </form>
+      </div>
     </section>
-</body>
+  </body>
 </html>
